[gd_scene load_steps=9 format=3 uid="uid://y444dyok5i2s"]

[ext_resource type="Script" path="res://Main_menu_stuff/main_menu.gd" id="1_jetss"]
[ext_resource type="Texture2D" uid="uid://cljmgd80tok23" path="res://Art/start_quit.png" id="1_nbql8"]
[ext_resource type="PackedScene" uid="uid://p1l776ulwc4j" path="res://Main_menu_stuff/levels_ui.tscn" id="2_lj3p5"]
[ext_resource type="Texture2D" uid="uid://cxh564xeb81bp" path="res://Art/floor_GUI.png" id="2_t7uoi"]
[ext_resource type="Texture2D" uid="uid://bw46g6doc28ns" path="res://Art/mainMenuLevels.png" id="3_736bg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x0mjl"]
atlas = ExtResource("2_t7uoi")
region = Rect2(0, 96, 42, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivcoe"]
atlas = ExtResource("3_736bg")
region = Rect2(32, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g2v34"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0mjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivcoe")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Main_menu" type="Node2D"]
script = ExtResource("1_jetss")
levels_ui_scene = ExtResource("2_lj3p5")

[node name="start_button" type="Sprite2D" parent="."]
position = Vector2(96, 176)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_nbql8")
region_enabled = true
region_rect = Rect2(0, 0, 42, 16)

[node name="quit_button" type="Sprite2D" parent="."]
position = Vector2(288, 176)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_nbql8")
region_enabled = true
region_rect = Rect2(0, 16, 42, 16)

[node name="playerSelection" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_g2v34")

[node name="level_slot_1" type="Marker2D" parent="."]
position = Vector2(74, 42)

[node name="level_slot_2" type="Marker2D" parent="."]
position = Vector2(138, 42)

[node name="level_slot_3" type="Marker2D" parent="."]
position = Vector2(202, 42)

[node name="level_slot_4" type="Marker2D" parent="."]
position = Vector2(266, 42)

[node name="level_slot_5" type="Marker2D" parent="."]
position = Vector2(330, 42)

[node name="level_slot_6" type="Marker2D" parent="."]
position = Vector2(74, 106)

[node name="level_slot_7" type="Marker2D" parent="."]
position = Vector2(138, 106)

[node name="level_slot_8" type="Marker2D" parent="."]
position = Vector2(202, 106)

[node name="level_slot_9" type="Marker2D" parent="."]
position = Vector2(266, 106)

[node name="level_slot_10" type="Marker2D" parent="."]
position = Vector2(330, 106)

[node name="level_slot_11" type="Marker2D" parent="."]
position = Vector2(74, 170)

[node name="level_slot_12" type="Marker2D" parent="."]
position = Vector2(138, 170)

[node name="level_slot_13" type="Marker2D" parent="."]
position = Vector2(202, 170)

[node name="level_slot_14" type="Marker2D" parent="."]
position = Vector2(266, 170)

[node name="level_slot_15" type="Marker2D" parent="."]
position = Vector2(330, 170)
